# classreader-rs

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
ci/: script.sh
examples/: dump_class.rs
src/: decode.rs  lib.rs  model.rs  result.rs
